--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -92,6 +92,8 @@ header .header_logo_title {
 .pricing_wrapper {
   display: flex;
   flex-wrap: wrap;
+  width: 75%;
+  margin: auto;
 }
 .pricing_wrapper .pricing_item {
   flex-grow: 1;
@@ -187,4 +189,15 @@ header .header_logo_title {
 .carousel-inner {
   width: 100%;
   max-height: 200px !important;
+}
+
+.carousel-image{
+  
+    display: block;
+    max-width:320px;
+    max-height:480px;
+    width: auto;
+    height: auto;
+    margin: auto;
+  
 }
