--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -188,16 +188,38 @@ header .header_logo_title {
 }
 .carousel-inner {
   width: 100%;
-  max-height: 200px !important;
+
 }
 
 .carousel-image{
   
-    display: block;
+    display: block !important;
     max-width:320px;
-    max-height:480px;
+   
     width: auto;
     height: auto;
     margin: auto;
   
+}
+.carousel-inner{
+  height:452px !important
+
+}
+.carousel-caption{
+  bottom:-190px !important;
+  padding-bottom: -8px;
+}
+.carousel-head{
+  margin-top: 20px;
+}
+b{
+  font-size: 1.5rem;
+}
+@media screen and (max-width:768px){
+  .carousel-image{
+    max-width: 190px;
+  }
+  .carousel-caption{
+    position:initial !important
+  }
 }
